Fix repainting of composited fixed position elements in iframes https://bugs.webkit.org/show_bug.cgi?id=64010

Reviewed by Simon Fraser.

Source/WebCore:

In cases where an iframe's contents have their own graphics layer, the
invalidation during scrolling was being sent to the wrong render
layer. Fixed by checking if such a layer exists and routing scrolling
invalidations there first.

* page/FrameView.cpp:
(WebCore::FrameView::scrollContentsSlowPath):

LayoutTests:

* compositing/iframes/fixed-position-iframe-expected.png: Added.
* compositing/iframes/fixed-position-iframe-expected.txt: Added.
* compositing/iframes/fixed-position-iframe.html: Added.
* compositing/iframes/resources/fixed-position-subframe.html: Added.

Canonical link: https://commits.webkit.org/80779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91597 268f45cc-cd09-0410-ab3c-d52691b4dbfc